--- a/app/jetengine.html
+++ b/app/jetengine.html
@@ -62,89 +62,89 @@
   <div id="page-wrapper" style="height: 100%; overflow: scroll;">
 
     <div class="container-fluid">
-
-      <div class="row">
-        <div class="col-lg-2">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Turbine </h3>
-            </div>
-            <div class="panel-body">
-              <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/turbine.png"
-                   width="100%" align="middle" onmouseover="jet.hilightPart('Turbine');">
-            </div>
-          </div>
-        </div>
-
-
-        <div class="col-lg-2">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Fan Blades</h3>
-            </div>
-            <div class="panel-body">
-              <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/fanblade.png"
-                   width="100%" align="middle" onmouseover="jet.hilightPart('Fan');">
-            </div>
-          </div>
-        </div>
+      <!--
+            <div class="row">
+              <div class="col-lg-2">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Turbine </h3>
+                  </div>
+                  <div class="panel-body">
+                    <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/turbine.png"
+                         width="100%" align="middle" onmouseover="jet.hilightPart('Turbine');">
+                  </div>
+                </div>
+              </div>
 
 
-        <div class="col-lg-2">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i> Nose Cone</h3>
-            </div>
-            <div class="panel-body">
-              <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/nosecone.png"
-                   width="100%" align="middle" onmouseover="jet.hilightPart('Nose');">
-
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-2">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Combustion</h3>
-            </div>
-            <div class="panel-body">
-              <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/combusture.png"
-                   width="100%" align="middle" onmouseover="jet.hilightPart('Compressor');">
-
-            </div>
-          </div>
-        </div>
+              <div class="col-lg-2">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Fan Blades</h3>
+                  </div>
+                  <div class="panel-body">
+                    <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/fanblade.png"
+                         width="100%" align="middle" onmouseover="jet.hilightPart('Fan');">
+                  </div>
+                </div>
+              </div>
 
 
-        <div class="col-lg-2">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Compressors</h3>
-            </div>
-            <div class="panel-body">
-              <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/compresor.png"
-                   width="100%" align="middle" onmouseover="jet.hilightPart('Combustion');">
+              <div class="col-lg-2">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i> Nose Cone</h3>
+                  </div>
+                  <div class="panel-body">
+                    <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/nosecone.png"
+                         width="100%" align="middle" onmouseover="jet.hilightPart('Nose');">
 
-            </div>
-          </div>
-        </div>
+                  </div>
+                </div>
+              </div>
 
-        <div class="col-lg-2">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Shaft</h3>
-            </div>
-            <div class="panel-body">
-              <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/shaft.png"
-                   width="100%" onmouseover="jet.hilightPart('Shaft');">
+              <div class="col-lg-2">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Combustion</h3>
+                  </div>
+                  <div class="panel-body">
+                    <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/combusture.png"
+                         width="100%" align="middle" onmouseover="jet.hilightPart('Compressor');">
 
-            </div>
-          </div>
-        </div>
+                  </div>
+                </div>
+              </div>
 
 
-      </div>
+              <div class="col-lg-2">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Compressors</h3>
+                  </div>
+                  <div class="panel-body">
+                    <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/compresor.png"
+                         width="100%" align="middle" onmouseover="jet.hilightPart('Combustion');">
+
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-2">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Shaft</h3>
+                  </div>
+                  <div class="panel-body">
+                    <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/shaft.png"
+                         width="100%" onmouseover="jet.hilightPart('Shaft');">
+
+                  </div>
+                </div>
+              </div>
+
+
+            </div>-->
       <!-- /.row -->
 
       <div class="row">
@@ -154,13 +154,22 @@
               <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i> Jet Engine</h3>
             </div>
             <div class="panel-body">
-              <div class="row">
-                <div id="jet" class="col-md-8 webgl img-thumbnail img-responsive"></div>
-                <div class="col-md-4">
-                  <button type="submit" id="playbtn" onclick="jet.playPause('#playbtn')"
-                        class="btn btn-primary cust-buton">Play
-                  </button>
 
+              <div class="row">
+                <div class="col-md-12">
+                  <div id="jet" class="webgl img-thumbnail img-responsive"></div>
+                </div>
+              </div>
+
+              <br/>
+
+              <div class="row">
+                <div class="col-sm-3">
+                  <button type="submit" id="playbtn" onclick="jet.playPause('#playbtn')"
+                          class="btn btn-primary cust-buton">Play
+                  </button>
+                </div>
+                <div class="col-sm-6">
                   <table style="margin-top:5px;" width="100%" border="0">
                     <colgroup>
                       <col span="1" style="width: 15%;">
@@ -169,19 +178,49 @@
                     <tr>
                       <td>Thrust:</td>
                       <td><input id="ex1" style="width:100%" data-slider-id='ex1Slider' data-slider-tooltip="hide"
-                               data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="2"/>
+                                 data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="2"/>
                       </td>
+                    </tr>
+                  </table>
+                </div>
+                <div class="col-sm-3">
+                  <button type="submit" class="btn scrollToTOP btn-primary cust-buton">To Materials</button>
+                </div>
+              </div>
+
+              <br/>
+
+              <div class="row">
+                <div class="col-md-12">
+                  <table class="table table-bordered">
+                    <col width="30%">
+                    <col width="10%">
+                    <col width="60%">
+                    <tr>
+                      <th rowspan="4" id="parIMG"></th>
+                      <th colspan="2" id="partName"><h4>Part</h4></th>
+                    </tr>
+                    <tr>
+                      <td>Description</td>
+                      <td id="PartDesc"></td>
+                    </tr>
+                    <tr>
+                      <td>Operating Systems</td>
+                      <td id="PartTmp"></td>
+                    </tr>
+                    <tr>
+                      <td>Rpm</td>
+                      <td id="PartRPM"></td>
                     </tr>
                   </table>
 
 
-                  <button type="submit" id="scrollToTOP" class="btn btn-primary cust-buton">To Parts List</button>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        </div>
+      </div>
       <!-- /.row -->
 
 
@@ -190,6 +229,9 @@
           <div class="panel panel-default">
             <div class="panel-heading">
               <h3 class="panel-title"><i class="fa fa-cog fa-spin fa-fw"></i> Controls</h3>
+              <button type="submit" id="totheTop" style="margin-top:-25px;" class="btn btn-primary pull-right">To Jet
+                Engines
+              </button>
             </div>
             <div class="panel-body">
               <table class="table table-bordered" style="width:80%; margin: 0 auto;">
@@ -210,27 +252,34 @@
                 </tr>
                 <tr>
                   <td>
-                    <img src="images/metal3.jpg" class="img img-circle img-responsive img-thumbnail materialImg"
+                    <img src="images/metal3.jpg"
+                         class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
+                         onload="jet.selectmaterial(this,1)"
                          onclick="jet.selectmaterial(this,1)"/>
                   </td>
                   <td>
-                    <img src="images/aluminium.jpg" class="img img-circle img-responsive img-thumbnail materialImg"
+                    <img src="images/aluminium.jpg"
+                         class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
                          onclick="jet.selectmaterial(this,0)"/>
                   </td>
                   <td>
-                    <img src="images/titainum.jpg" class="img img-circle img-responsive img-thumbnail materialImg"
+                    <img src="images/titainum.jpg"
+                         class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
                          onclick="jet.selectmaterial(this,2)"/>
                   </td>
                   <td>
-                    <img src="images/crate.jpg" class="img img-circle img-responsive img-thumbnail materialImg"
+                    <img src="images/crate.jpg"
+                         class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
                          onclick="jet.selectmaterial(this,3)"/>
                   </td>
                   <td>
-                    <img src="images/carbon-texture.png" class="img img-circle img-responsive img-thumbnail materialImg"
+                    <img src="images/carbon-texture.png"
+                         class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
                          onclick="jet.selectmaterial(this,3)"/>
                   </td>
                   <td>
-                    <img src="images/castIron.jpg" class="img img-circle img-responsive img-thumbnail materialImg"
+                    <img src="images/castIron.jpg"
+                         class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
                          onclick="jet.selectmaterial(this,3)"/>
                   </td>
                 </tr>
@@ -284,7 +333,9 @@
 
 
     <script type='text/javascript' src="js/bootstrap-slider.js"></script>
+      <script src="js/Detector.js"></script>
     <script type='text/javascript'>
+
 
 
 
@@ -297,14 +348,10 @@
 
 
 
-
-
-
-
-
-
       $(document).ready(function () {
         /* Example 1 */
+
+        if (!Detector.webgl) alert("This Browser does not suport WebGL please go and get it updated.\n https://get.webgl.org/ ");
         $('#ex1').slider({
           formatter: function (value) {
 
@@ -312,18 +359,18 @@
           }
         });
 
-        $('.partIMG').click(function () {
+        $('#totheTop').click(function () {
 
           $('html, body').animate({
-            scrollTop: ($("#infoSection").offset().top + 20)
+            scrollTop: 0
           }, 500);
 
         });
 
-        $('#scrollToTOP').click(function () {
+        $('.scrollToTOP').click(function () {
 
           $('html, body').animate({
-            scrollTop: $("#page-wrapper").offset().top
+            scrollTop: $("#infoSection").offset().top
           }, 500);
 
         });
