--- a/app/index.html
+++ b/app/index.html
@@ -3,3 +3,4 @@
 </h1>
 <br>
 <h2> Look at a jet engine <a href="jetengine.html">here</a></h2>
+<h2> Look at a new jet engine <a href="newDesign.html">here</a></h2>
