--- a/app/newDesign.html
+++ b/app/newDesign.html
@@ -119,6 +119,7 @@
               </div>
             </div>
 
+
             <br/>
 
             <div class="row">
@@ -162,56 +163,55 @@
           </div>
           <div class="panel-body">
 
-            <table class="table table-bordered" style="width:80%; margin: 0 auto;">
-              <col width="16%">
-              <col width="16%">
-              <col width="16%">
-              <col width="16%">
-              <col width="16%">
-              <col width="16%">
-              <tr class="active">
-                <td><b>Steel</b></td>
-                <td><b>Nickle</b></td>
-                <td><b>Titainum</b></td>
-                <td><b>Wood</b></td>
-                <td><b>Carbon Fibre</b></td>
-                <td><b>Cast Iron</b></td>
+            <div class="row">
+              <div class="col-md-12">
+              <table class="contact-table table table-curved table-striped">
 
-              </tr>
-              <tr>
-                <td>
-                  <img src="images/metal3.jpg"
-                       class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
-                       onload="jet.selectmaterial(this,1)"
-                       onclick="jet.selectmaterial(this,1)"/>
-                </td>
-                <td>
-                  <img src="images/aluminium.jpg"
-                       class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
-                       onclick="jet.selectmaterial(this,0)"/>
-                </td>
-                <td>
-                  <img src="images/titainum.jpg"
-                       class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
-                       onclick="jet.selectmaterial(this,2)"/>
-                </td>
-                <td>
-                  <img src="images/crate.jpg"
-                       class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
-                       onclick="jet.selectmaterial(this,3)"/>
-                </td>
-                <td>
-                  <img src="images/carbon-texture.png"
-                       class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
-                       onclick="jet.selectmaterial(this,3)"/>
-                </td>
-                <td>
-                  <img src="images/castIron.jpg"
-                       class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
-                       onclick="jet.selectmaterial(this,3)"/>
-                </td>
-              </tr>
-            </table>
+                <tr class="tr-center">
+                  <td><b>Steel</b></td>
+                  <td><b>Nickle</b></td>
+                  <td><b>Titainum</b></td>
+                  <td><b>Wood</b></td>
+                  <td><b>Carbon Fibre</b></td>
+                  <td><b>Cast Iron</b></td>
+
+                </tr>
+                <tr>
+                  <td>
+                    <img src="images/metal3.jpg"
+                         class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
+                         onload="jet.selectmaterial(this,1)"
+                         onclick="jet.selectmaterial(this,1)"/>
+                  </td>
+                  <td>
+                    <img src="images/aluminium.jpg"
+                         class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
+                         onclick="jet.selectmaterial(this,0)"/>
+                  </td>
+                  <td>
+                    <img src="images/titainum.jpg"
+                         class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
+                         onclick="jet.selectmaterial(this,2)"/>
+                  </td>
+                  <td>
+                    <img src="images/crate.jpg"
+                         class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
+                         onclick="jet.selectmaterial(this,3)"/>
+                  </td>
+                  <td>
+                    <img src="images/carbon-texture.png"
+                         class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
+                         onclick="jet.selectmaterial(this,3)"/>
+                  </td>
+                  <td>
+                    <img src="images/castIron.jpg"
+                         class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
+                         onclick="jet.selectmaterial(this,3)"/>
+                  </td>
+                </tr>
+              </table>
+            </div>
+            </div>
 
 
             <div class="row" style="padding: 10px;">
@@ -243,8 +243,63 @@
             <h3 class="panel-title"><i class="fa fa-cog fa-spin fa-fw"></i> Choose Material Section</h3>
           </div>
           <div class="panel-body">
+
+
             <div class="row">
-              <div class="col-lg-2">
+              <div class="col-md-12">
+                <table class="contact-table table table-curved table-striped">
+
+                  <tr class="tr-center">
+                    <td><b>Nose Cone</b></td>
+                    <td><b>Fan</b></td>
+                    <td><b>Compressor</b></td>
+                    <td><b>Combustion</b></td>
+                    <td><b>Shaft</b></td>
+                    <td><b>Turnbine</b></td>
+
+                  </tr>
+                  <tr>
+                    <td>
+                      <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/nosecone.png"
+                           width="100%" align="middle">
+                    </td>
+                    <td>
+                      <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/fanblade.png"
+                           width="100%" align="middle">
+                    </td>
+                    <td>
+                      <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/compresor.png"
+                           width="100%" align="middle">
+                    </td>
+                    <td>
+                      <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/combusture.png"
+                           width="100%" align="middle">
+                    </td>
+                    <td>
+                      <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/shaft.png"
+                           width="100%" align="middle">
+                    </td>
+                    <td>
+                      <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/turbine.png"
+                           width="100%" align="middle">
+                    </td>
+                  </tr>
+
+                  <tr>
+                    <td><div class="drop-thing img-thumbnail"></div></td>
+                    <td><div class="drop-thing img-thumbnail"></div></td>
+                    <td><div class="drop-thing img-thumbnail"></div></td>
+                    <td><div class="drop-thing img-thumbnail"></div></td>
+                    <td><div class="drop-thing img-thumbnail"></div></td>
+                    <td><div class="drop-thing img-thumbnail"></div></td>
+                  </tr>
+                </table>
+                </div>
+              </div>
+
+            <!--
+            <div class="row">
+              <div class="col-sm-2">
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Turbine </h3>
@@ -262,7 +317,7 @@
               </div>
 
 
-              <div class="col-lg-2">
+              <div class="col-sm-2">
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Fan Blades</h3>
@@ -278,7 +333,7 @@
               </div>
 
 
-              <div class="col-lg-2">
+              <div class="col-sm-2">
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i> Nose Cone</h3>
@@ -295,7 +350,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-2">
+              <div class="col-sm-2">
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Combustion</h3>
@@ -312,7 +367,7 @@
               </div>
 
 
-              <div class="col-lg-2">
+              <div class="col-sm-2">
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Compressors</h3>
@@ -328,7 +383,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-2">
+              <div class="col-sm-2">
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Shaft</h3>
@@ -348,49 +403,47 @@
             </div>
             <!-- /.row -->
 
-            <table class="table table-bordered" style="width:80%; margin: 0 auto;">
-              <col width="16%">
-              <col width="16%">
-              <col width="16%">
-              <col width="16%">
-              <col width="16%">
-              <col width="16%">
-              <tr class="active">
-                <td><b>Steel</b></td>
-                <td><b>Nickle</b></td>
-                <td><b>Titainum</b></td>
-                <td><b>Wood</b></td>
-                <td><b>Carbon Fibre</b></td>
-                <td><b>Cast Iron</b></td>
+            <div class="row">
+              <div class="col-md-12">
+                <table class="contact-table table table-curved table-striped">
+                  <tr class="tr-center">
+                    <td><b>Steel</b></td>
+                    <td><b>Nickle</b></td>
+                    <td><b>Titainum</b></td>
+                    <td><b>Wood</b></td>
+                    <td><b>Carbon Fibre</b></td>
+                    <td><b>Cast Iron</b></td>
 
-              </tr>
-              <tr>
-                <td>
-                  <img src="images/metal3.jpg"
-                       class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg" />
-                </td>
-                <td>
-                  <img src="images/aluminium.jpg"
-                       class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
-                </td>
-                <td>
-                  <img src="images/titainum.jpg"
-                       class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
-                </td>
-                <td>
-                  <img src="images/crate.jpg"
-                       class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
-                </td>
-                <td>
-                  <img src="images/carbon-texture.png"
-                       class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
-                </td>
-                <td>
-                  <img src="images/castIron.jpg"
-                       class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
-                </td>
-              </tr>
-            </table>
+                  </tr>
+                  <tr>
+                    <td>
+                      <img src="images/metal3.jpg"
+                           class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg" />
+                    </td>
+                    <td>
+                      <img src="images/aluminium.jpg"
+                           class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
+                    </td>
+                    <td>
+                      <img src="images/titainum.jpg"
+                           class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
+                    </td>
+                    <td>
+                      <img src="images/crate.jpg"
+                           class=" scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
+                    </td>
+                    <td>
+                      <img src="images/carbon-texture.png"
+                           class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
+                    </td>
+                    <td>
+                      <img src="images/castIron.jpg"
+                           class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
+                    </td>
+                  </tr>
+                </table>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -593,8 +646,9 @@
       }
     });
 
-    if (!Detector.webgl) alert("This Browser does not suport WebGL please go and get it updated.\n https://get.webgl.org/ ");
+    if (!Detector.webgl) alert("This Browser does not support WebGL please go and get it updated.\n https://get.webgl.org/ ");
 
+    if(screen.width<1250){alert("Caution Screen Size is to small");}
 
     $('#totheTop').click(function () {
 
