Added Touch support lets see if this works

--- a/app/newDesign.html
+++ b/app/newDesign.html
@@ -547,7 +547,7 @@
 
 <script type='text/javascript' src="bower_components/seiyria-bootstrap-slider/js/bootstrap-slider.js"></script>
 <script src="js/Detector.js"></script>
-
+<script src="js/jquery.ui.touch-punch.min.js"></script>
 
 <script>
   $(document).ready(function () {
@@ -648,7 +648,7 @@
 
     if (!Detector.webgl) alert("This Browser does not support WebGL please go and get it updated.\n https://get.webgl.org/ ");
 
-    if(screen.width<1250){alert("Caution Screen Size is to small");}
+    if(screen.width<900){alert("Caution Screen Size is to small");}
 
     $('#totheTop').click(function () {
 
