New UI V3 Design

--- a/app/index.html
+++ b/app/index.html
@@ -2,5 +2,5 @@
   Something is comming soon!!!!
 </h1>
 <br>
-<h2> Look at a jet engine <a href="jetengine.html">here</a></h2>
-<h2> Look at a new jet engine <a href="newDesign.html">here</a></h2>
+<h2> V1 Look at a jet engine <a href="jetengine.html">here</a></h2>
+<h2> V2 Look at a new jet engine <a href="newDesign.html">here</a></h2>
