--- a/app/jetengine.html
+++ b/app/jetengine.html
@@ -15,10 +15,8 @@
   <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link href="css/sb-admin.css" rel="stylesheet">
+  <link href="css/custome.css" rel="stylesheet">
 
-  <!-- Morris Charts CSS -->
-  <link href="css/plugins/morris.css" rel="stylesheet">
   <link href="css/bootstrap-slider.css" rel="stylesheet">
 
   <!-- Custom Fonts -->
@@ -31,8 +29,8 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <script src="js/raphael.2.1.0.min.js"></script>
-  <script src="js/justgage.1.0.1.min.js"></script>
+  <script src="js/plugins/raphael.2.1.0.min.js"></script>
+  <script src="js/plugins/justgage.1.0.1.min.js"></script>
 
 
 </head>
@@ -333,8 +331,8 @@
     </script>
 
 
-    <script type='text/javascript' src="js/bootstrap-slider.js"></script>
-      <script src="js/Detector.js"></script>
+      <script type='text/javascript' src="js/plugins/bootstrap-slider.js"></script>
+      <script src="js/plugins/Detector.js"></script>
     <script type='text/javascript'>
 
 
