--- a/app/newDesign.html
+++ b/app/newDesign.html
@@ -18,8 +18,8 @@
   <link href="css/custome.css" rel="stylesheet">
   <link href="css/bootstrap-slider.css" rel="stylesheet">
 
-  <script src="js/raphael.2.1.0.min.js"></script>
-  <script src="js/justgage.1.0.1.min.js"></script>
+  <script src="js/plugins/raphael.2.1.0.min.js"></script>
+  <script src="js/plugins/justgage.1.0.1.min.js"></script>
 
 
 
@@ -546,8 +546,8 @@
 
 
 <script type='text/javascript' src="bower_components/seiyria-bootstrap-slider/js/bootstrap-slider.js"></script>
-<script src="js/Detector.js"></script>
-<script src="js/jquery.ui.touch-punch.min.js"></script>
+<script src="js/plugins/Detector.js"></script>
+<script src="js/plugins/jquery.ui.touch-punch.min.js"></script>
 
 <script>
   $(document).ready(function () {
