Inital work before rewrite

--- a/app/newDesign.html
+++ b/app/newDesign.html
@@ -61,7 +61,9 @@
 
       </li>
       <li>
-        <button type="submit" id="Help" class="btn btn-default cust-buton" data-toggle="modal" data-target="#ABOUTModal"> About</button>
+        <button type="submit" id="About" class="btn btn-default cust-buton" data-toggle="modal"
+                data-target="#ABOUTModal"> About
+        </button>
 
       </li>
       <li>
